src/rfx/tests/preprocessor/Preprocessor.PreprocessorTests.Error.approved.out
Output:[








]
Diagnostic:[
	..\src\rfx\tests\preprocessor\Error.rfx(9): error 15900: #error: This isn't valid!
	#error This isn't valid!
	 ^~~~~
]